--- a/brumstaxi/res/values-sw320dp/dimens.xml
+++ b/brumstaxi/res/values-sw320dp/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
 	<!-- Book a Taxi  -->
-    <dimen name="needTaxiSize">15sp</dimen>
-	<dimen name="tiredOfWaitingSize">9sp</dimen>
+    <dimen name="needTaxiSize">22sp</dimen>
+	<dimen name="tiredOfWaitingSize">11sp</dimen>
 	<dimen name="bookTaxiHeaderHeight">45dp</dimen>
 	<dimen name="bookTaxiDateTimeHeight">180dp</dimen>
 	<dimen name="bookTaxiElementSpace">16dp</dimen>
@@ -9,5 +9,6 @@
 	<dimen name="bTaxiPaddingLeft">6dp</dimen>
 	<dimen name="bTaxiPaddingTop">8dp</dimen>
 	<dimen name="bTaxiCommentHeight">24dp</dimen>
+	<dimen name="bTaxiDateTimeTextSize">9sp</dimen>
 	
 </resources>
