--- a/brumstaxi/res/values-sw480dp/dimens.xml
+++ b/brumstaxi/res/values-sw480dp/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
 	<!-- Book a Taxi  -->
-    <dimen name="needTaxiSize">21sp</dimen>
-	<dimen name="tiredOfWaitingSize">12sp</dimen>
+    <dimen name="needTaxiSize">32sp</dimen>
+	<dimen name="tiredOfWaitingSize">15sp</dimen>
 	<dimen name="bookTaxiHeaderHeight">60dp</dimen>
 	<dimen name="bookTaxiDateTimeHeight">180dp</dimen>
 	<dimen name="bookTaxiElementSpace">20dp</dimen>
@@ -9,5 +9,6 @@
 	<dimen name="bTaxiPaddingLeft">8dp</dimen>
 	<dimen name="bTaxiPaddingTop">10dp</dimen>
 	<dimen name="bTaxiCommentHeight">32dp</dimen>
+	<dimen name="bTaxiDateTimeTextSize">15sp</dimen>
 	
 </resources>
