--- a/brumstaxi/res/values-sw600dp/dimens.xml
+++ b/brumstaxi/res/values-sw600dp/dimens.xml
@@ -1,7 +1,8 @@
 <resources>
 	<!-- Book a Taxi  -->
-    <dimen name="needTaxiSize">42sp</dimen>
-	<dimen name="tiredOfWaitingSize">24sp</dimen>
+	
+    <dimen name="needTaxiSize">38sp</dimen>
+	<dimen name="tiredOfWaitingSize">22sp</dimen>
 	<dimen name="bookTaxiHeaderHeight">90dp</dimen>
 	<dimen name="bookTaxiDateTimeHeight">180dp</dimen>
 	<dimen name="bookTaxiElementSpace">30dp</dimen>
@@ -9,4 +10,5 @@
 	<dimen name="bTaxiPaddingLeft">12dp</dimen>
 	<dimen name="bTaxiPaddingTop">16dp</dimen>
 	<dimen name="bTaxiCommentHeight">48dp</dimen>
+	<dimen name="bTaxiDateTimeTextSize">18sp</dimen>
 </resources>
