--- a/brumstaxi/res/layout/booktexi_response.xml
+++ b/brumstaxi/res/layout/booktexi_response.xml
@@ -12,16 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
+        android:layout_marginTop="20dip"
         android:contentDescription="@string/reg_header"
         android:background="@drawable/a1"/>
     <LinearLayout
         android:id="@+id/contentBody"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="80"
+        android:layout_weight="78"
         android:weightSum="100"
         android:orientation="vertical"
-        android:padding="20dp" >
+        android:padding="10dp" >
         <TextView 
             android:layout_width="wrap_content"
             android:layout_height="0dp"
@@ -29,22 +30,25 @@
             android:text="@string/thanksMsg"
             android:textColor="@color/blackColor"
             android:textScaleX="2.0"
+            android:visibility="gone"
             />
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_weight="50"
+            android:layout_weight="65"
+            android:layout_marginTop="20dip"
             android:background="@drawable/rounded_corner"
             android:orientation="vertical"
             >
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:text="@string/bookTaxiResp"
                 android:textColor="@color/mainColor"
-                android:layout_weight="1"
+                 android:layout_alignParentTop="true"
                 android:textScaleX="2.0"
-                android:padding="20dp"
+                android:layout_marginTop="10dip"
+                android:layout_marginLeft="3dip"
                 />
             <TextView 
                 android:layout_width="wrap_content"
@@ -52,17 +56,19 @@
                 android:layout_gravity="right"
                 android:text="@string/thanksMsg"
                 android:textColor="@color/blackColor"
-                android:layout_marginBottom="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
                 android:textScaleX="2.0"
                 />
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
     <Button
        android:id="@+id/bCallUs"
        android:layout_height="0dp"
        android:layout_width="match_parent"
-       android:layout_weight="10"
+       android:layout_weight="12"
        android:background="@drawable/call_us"     
        /> 
 </LinearLayout>
