--- a/brumstaxi/res/layout/login.xml
+++ b/brumstaxi/res/layout/login.xml
@@ -1,14 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:whatever="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity" 
+    android:orientation="vertical"
+    android:weightSum="100">
     <RelativeLayout
         android:id="@+id/loginHeader"
-        android:layout_height="50dp"
+        android:layout_weight="10"
+        android:layout_height="0dip"
+        android:layout_marginTop="20dip"
         android:layout_width="fill_parent"
         android:background="@color/mainColor"
          >
@@ -22,12 +26,13 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
+        android:layout_height="0dip"
+        android:orientation="vertical"
         android:paddingBottom="80dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingTop="50dp" >
+        android:paddingTop="40dp" 
+        android:layout_weight="78">
         
         <TextView
             android:id="@+id/loginLabel"
@@ -35,16 +40,17 @@
             android:layout_width="wrap_content"
             android:textColor="@color/whiteColor"
             android:textSize="30sp"
-            android:layout_marginTop="20dp"
+            
             android:text="@string/login"
             />
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/relativeLayout3"
             android:layout_width="fill_parent"
-            android:layout_height="60dp"
-            android:layout_below="@+id/loginLabel"
+            android:layout_height="70dp"
+           android:layout_below="@+id/loginLabel"
             android:layout_marginTop="20dp"
-            android:paddingLeft="20dp"
+           
+            android:orientation="vertical"
             android:background="@drawable/rounded_corner" >
             
             <TextView
@@ -61,21 +67,23 @@
                 android:id="@+id/loginUsername"
                 android:layout_alignParentBottom="true"
                 android:textColor="@color/regTextField"
-                android:hint="@string/username"
+              
                 android:textSize="17sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                 android:background="#00000000"
                 />
-        </RelativeLayout>
+        </LinearLayout>
         
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/relativeLayout4"
             android:layout_width="fill_parent"
-            android:layout_height="60dp"
+            android:layout_height="70dp"
             android:layout_below="@+id/relativeLayout3"
             android:layout_marginTop="10dp"
-            android:paddingLeft="20dp"
-            android:background="@drawable/rounded_corner" >
+           
+            android:background="@drawable/rounded_corner"
+            android:orientation="vertical" >
             
             <TextView
                 android:id="@+id/regPassLabel"
@@ -92,29 +100,34 @@
                 android:layout_alignParentBottom="true"
                 android:textColor="@color/regTextField"
                 android:inputType="textPassword"
-                android:hint="@string/password"
+                
                 android:textSize="17sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                 android:background="#00000000"
                 />
-        </RelativeLayout>
+        </LinearLayout>
+
         <Button
-            android:id="@+id/loginButton"
-            android:layout_alignParentRight="true"
-            android:layout_width="190dp"
-            android:layout_height="50dp"
             android:layout_below="@+id/relativeLayout4"
-            android:layout_centerHorizontal="true"
+            android:id="@+id/loginButton"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/a3" />
+            android:background="@drawable/a3"
+            android:layout_alignRight="@+id/relativeLayout4"
+            android:layout_marginRight="4dip"
+            android:gravity="left" />
         
       </RelativeLayout>  
     <Button 
         android:id="@+id/loginCallUs"
-        android:layout_height="61dp"
-        android:layout_alignParentBottom="true"
-        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+      android:layout_width="match_parent"
+      android:layout_weight="12.5"
+      android:layout_gravity="bottom"
+      android:gravity="bottom"
         android:background="@drawable/call_us"
         />
 
-</RelativeLayout>
+</LinearLayout>
