--- a/brumstaxi/res/values-sw720dp/dimens.xml
+++ b/brumstaxi/res/values-sw720dp/dimens.xml
@@ -1,7 +1,8 @@
 <resources>
 	<!-- Book a Taxi  -->
+	
     <dimen name="needTaxiSize">56sp</dimen>
-    <dimen name="tiredOfWaitingSize">32sp</dimen>
+    <dimen name="tiredOfWaitingSize">35sp</dimen>
 	<dimen name="bookTaxiHeaderHeight">120dp</dimen>
 	<dimen name="bookTaxiDateTimeHeight">240dp</dimen>
 	<dimen name="bookTaxiElementSpace">40dp</dimen>
@@ -9,5 +10,6 @@
 	<dimen name="bTaxiPaddingLeft">16dp</dimen>
 	<dimen name="bTaxiPaddingTop">20dp</dimen>
 	<dimen name="bTaxiCommentHeight">64dp</dimen>
+	<dimen name="bTaxiDateTimeTextSize">21sp</dimen>
 
 </resources>
