--- a/brumstaxi/res/values-sw480dp/dimens.xml
+++ b/brumstaxi/res/values-sw480dp/dimens.xml
@@ -10,5 +10,7 @@
 	<dimen name="bTaxiPaddingTop">10dp</dimen>
 	<dimen name="bTaxiCommentHeight">32dp</dimen>
 	<dimen name="bTaxiDateTimeTextSize">15sp</dimen>
+	<dimen name="mjAboveHeaderGap">12dp</dimen>
+	<dimen name="mjRelTopGap">24dp</dimen>
 	
 </resources>
