--- a/brumstaxi/res/values/color.xml
+++ b/brumstaxi/res/values/color.xml
@@ -5,5 +5,8 @@
     <color name="regTextField">#557699</color>
     <color name="mainColor">#006cb5</color>
     <color name="yellowColor">#d0bb50</color>
+     <color name="lightorange">#FFB180</color>
+      <color name="darckorange">#FF6600</color>
+      <color name="lightbalck">#4E4E4E</color>
     
 </resources>
