--- a/brumstaxi/res/layout/quotes.xml
+++ b/brumstaxi/res/layout/quotes.xml
@@ -10,15 +10,16 @@
         android:layout_height="0dp"
         android:layout_weight="10"
         android:contentDescription="@string/app_name"
+        android:layout_marginTop="20dip"
         android:background="@drawable/a14"
         />
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="10"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="5dp"
+        android:layout_weight="9"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_corner"
         android:orientation="horizontal"
         >
@@ -45,10 +46,10 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="10"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="5dp"
+        android:layout_weight="9"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_corner"
         android:orientation="horizontal"
         >
@@ -75,10 +76,10 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="10"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="5dp"
+        android:layout_weight="9"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_corner"
         android:orientation="horizontal"
         >
@@ -88,7 +89,7 @@
             android:text="@string/qt_datetime"
             android:textColor="@color/blackColor"
             android:textSize="20sp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="2dp"
             android:layout_marginLeft="5dp"
         />
         <TextView
@@ -97,7 +98,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/mainColor"
             android:textSize="20sp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="2dp"
             android:layout_marginLeft="5dp"  
         />
     </LinearLayout>
@@ -105,11 +106,11 @@
 	<LinearLayout
 	     android:layout_width="fill_parent"
 	     android:layout_height="0dp"
-	     android:layout_weight="10"
-	     android:layout_marginLeft="20dp"
-	     android:layout_marginRight="20dp"
+	     android:layout_weight="9"
+	     android:layout_marginLeft="15dp"
+	     android:layout_marginRight="15dp"
 	     android:baselineAligned="false"
-	     android:layout_marginTop="5dp"
+	     android:layout_marginTop="8dp"
 	     android:background="@drawable/rounded_corner"
 	     android:orientation="horizontal"
 	     android:weightSum="100" >
@@ -125,8 +126,8 @@
 		            android:text="@string/qt_passengers"
 		            android:textColor="@color/blackColor"
 		            android:textSize="20sp"
-		            android:layout_marginTop="5dp"
-		            android:layout_marginLeft="5dp"
+		            android:layout_marginTop="2dip"
+		            android:layout_marginLeft="5dip"
 		        />
 		        <TextView
 		            android:id="@+id/qtPassengerValue"
@@ -134,7 +135,7 @@
 		            android:layout_height="wrap_content"
 		            android:textColor="@color/mainColor"
 		            android:textSize="20sp"
-		            android:layout_marginTop="5dp"
+		            android:layout_marginTop="2dip"
 		            android:layout_marginLeft="5dp"  
 		        />
 	       </LinearLayout>
@@ -150,7 +151,7 @@
                     android:text="@string/qt_luggage"
                     android:textColor="@color/blackColor"
                     android:textSize="20sp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="2dip"
                     android:layout_marginLeft="5dp"
                 />
                 <TextView
@@ -159,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/mainColor"
                     android:textSize="20sp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="2dip"
                     android:layout_marginLeft="5dp"  
                 />
            </LinearLayout>    
@@ -167,10 +168,10 @@
 	<LinearLayout
 	    android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="40"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="5dp"
+        android:layout_weight="50"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_corner"
         android:orientation="vertical"
         android:scrollbars="vertical"
@@ -178,36 +179,27 @@
 	    >
 	    <LinearLayout 
 	        android:layout_width="fill_parent"
-	        android:layout_height="50dp"
+	        android:layout_height="wrap_content"
 	        android:baselineAligned="false"
 	        android:background="@color/mainColor"
+	        android:paddingBottom="5dip"
 	        android:weightSum="100"
 	        android:orientation="horizontal"
 	        >
-	        <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="50"
-                android:orientation="horizontal"
-            >
+	        
                <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_weight="50"
+                    android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:text="@string/qt_company"
                     android:textColor="@color/whiteColor"
                     android:textSize="20sp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="3dp"
                     android:layout_marginLeft="5dp"
                 />
-           </LinearLayout>
-           <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="50"
-                android:orientation="horizontal"
-            >
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_weight="50"
+                    android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:text="@string/qt_fare"
                     android:textColor="@color/whiteColor"
@@ -215,30 +207,12 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="5dp"
                 />
-           </LinearLayout>
 	    </LinearLayout>
-  	    <ScrollView
-  	        android:id="@+id/quoteScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            >
-         <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/companyQuoteBody"
-                android:orientation="vertical"
-                android:background="@color/whiteColor"
-               >
-             
-<!--##############################       Start         ########################-->
-            
-
-
-
-<!--##############################        End          ###########################-->
-            
-             </LinearLayout> 
-        </ScrollView>
+  	    <ListView 
+  	       android:id="@+id/listview_company"
+  	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="8dp"
+	        ></ListView>
 	</LinearLayout>
 </LinearLayout>
